src/nimxla/private/xla_wrapper.nim

## This module has the definitions for the C wrapper functions used to interface with the C++ XLA compiler.
## These are just for internal use. The nimxla, graph and literal packages export the public API.
##
## In order to compile and link first unpack the XLA shared library and includes from the Elixir Nx repo at
## https://github.com/elixir-nx/xla/releases under /usr/local
## 
## The C wrapper code here is copied from the https://github.com/LaurentMazare/xla-rs Rust bindings. 

{.compile(
    "xla_wrapper.cc", 
    "-std=c++17 -Wno-deprecated-declarations -Wno-defaulted-function-deleted -I/usr/local/xla_extension/include -DLLVM_ON_UNIX=1")
.}
{.passL: "-lxla_extension -lstdc++".}

type
  struct_pjrt_client = distinct object
  struct_pjrt_device = distinct object
  struct_pjrt_buffer = distinct object
  struct_pjrt_loaded_executable = distinct object
  struct_xla_builder = distinct object
  struct_xla_computation = distinct object
  struct_xla_op = distinct object
  struct_literal = distinct object
  struct_status = distinct object
  struct_shape = distinct object

  pjrt_client* = ptr struct_pjrt_client
  pjrt_device* = ptr struct_pjrt_device
  pjrt_buffer* = ptr struct_pjrt_buffer
  pjrt_loaded_executable* = ptr struct_pjrt_loaded_executable
  xla_builder* = ptr struct_xla_builder
  xla_computation* = ptr struct_xla_computation
  xla_op* = ptr struct_xla_op
  status_t* = ptr struct_status
  shape_t* = ptr struct_shape
  literal_t* = ptr struct_literal


proc pjrt_cpu_client_create*(a1: ptr pjrt_client): status_t {.importc: "pjrt_cpu_client_create".}
proc pjrt_gpu_client_create*(a1: ptr pjrt_client; a2: cdouble; a3: bool): status_t {.importc: "pjrt_gpu_client_create".}
proc pjrt_tpu_client_create*(a1: ptr pjrt_client; a2: cint): status_t {.importc: "pjrt_tpu_client_create".}
proc pjrt_client_free*(a1: pjrt_client) {.importc: "pjrt_client_free".}
proc pjrt_client_device_count*(a1: pjrt_client): cint {.importc: "pjrt_client_device_count".}
proc pjrt_client_addressable_device_count*(a1: pjrt_client): cint {.importc: "pjrt_client_addressable_device_count".}
proc pjrt_client_devices*(a1: pjrt_client; a2: ptr pjrt_device) {.importc: "pjrt_client_devices".}
proc pjrt_client_addressable_devices*(a1: pjrt_client; a2: ptr pjrt_device) {.importc: "pjrt_client_addressable_devices".}
proc pjrt_client_platform_name*(a1: pjrt_client): cstring {.importc: "pjrt_client_platform_name".}
proc pjrt_client_platform_version*(a1: pjrt_client): cstring {.importc: "pjrt_client_platform_version".}

proc pjrt_loaded_executable_free*(a1: pjrt_loaded_executable) {.importc: "pjrt_loaded_executable_free".}

proc pjrt_device_id*(a1: pjrt_device): cint {.importc: "pjrt_device_id".}
proc pjrt_device_process_index*(a1: pjrt_device): cint {.importc: "pjrt_device_process_index".}
proc pjrt_device_local_hardware_id*(a1: pjrt_device): cint {.importc: "pjrt_device_local_hardware_id".}
proc pjrt_device_transfer_to_infeed*(a1: pjrt_device; a2: literal_t): status_t {.importc: "pjrt_device_transfer_to_infeed".}
proc pjrt_device_transfer_from_outfeed*(a1: pjrt_device; a2: literal_t): status_t {.importc: "pjrt_device_transfer_from_outfeed".}
proc pjrt_device_kind*(a1: pjrt_device): cstring {.importc: "pjrt_device_kind".}
proc pjrt_device_debug_string*(a1: pjrt_device): cstring {.importc: "pjrt_device_debug_string".}
proc pjrt_device_to_string*(a1: pjrt_device): cstring {.importc: "pjrt_device_to_string".}

proc pjrt_buffer_from_host_literal*(a1: pjrt_client; a2: pjrt_device; a3: literal_t; 
  a4: ptr pjrt_buffer): status_t {.importc: "pjrt_buffer_from_host_literal".}
proc pjrt_buffer_from_host_buffer*(a1: pjrt_client; a2: pjrt_device; a3: pointer; a4: 
  cint; a5: cint; a6: ptr int64; a7: ptr pjrt_buffer): status_t {.importc: "pjrt_buffer_from_host_buffer".}
proc pjrt_buffer_to_literal_sync*(a1: pjrt_buffer; a2: ptr literal_t): status_t {.importc: "pjrt_buffer_to_literal_sync".}
proc pjrt_buffer_copy_raw_to_host_sync*(a1: pjrt_buffer; a2: pointer; 
  a3: csize_t; a4: csize_t): status_t {.importc: "pjrt_buffer_copy_raw_to_host_sync".}
proc pjrt_buffer_on_device_shape*(a1: pjrt_buffer): shape_t {.importc: "pjrt_buffer_on_device_shape".}
proc pjrt_buffer_copy_to_device*(a1: pjrt_buffer; a2: pjrt_device; a3: 
  ptr pjrt_buffer): status_t {.importc: "pjrt_buffer_copy_to_device".}
proc pjrt_buffer_free*(a1: pjrt_buffer) {.importc: "pjrt_buffer_free".}

proc xla_builder_create*(a1: cstring): xla_builder {.importc: "xla_builder_create".}
proc xla_builder_free*(a1: xla_builder) {.importc: "xla_builder_free".}
proc constant_literal*(a1: xla_builder; a2: literal_t): xla_op {.importc: "constant_literal".}
proc parameter*(a1: xla_builder; a2: int64; a3: cint; a4: cint; a5: ptr int64; a6: cstring): xla_op {.importc: "parameter".}
proc parameter_s*(a1: xla_builder; a2: int64; a3: shape_t; a4: cstring): xla_op {.importc: "parameter_s".}
proc infeed*(a1: xla_builder; a2: cint; a3: cint; a4: ptr int64; a5: cstring): xla_op {.importc: "infeed".}
proc outfeed*(a1: xla_op; a2: cint; a3: cint; a4: ptr int64; a5: cstring) {.importc: "outfeed".}
proc get_shape*(a1: xla_builder; a2: xla_op; a3: ptr shape_t): status_t {.importc: "get_shape".}
proc get_element_type*(a1: xla_builder; a2: xla_op; a3: ptr cint): status_t {.importc: "get_element_type".}
proc get_dimensions_size*(a1: xla_builder; a2: xla_op; a3: ptr cint): status_t {.importc: "get_dimensions_size".}
proc get_dimensions*(a1: xla_builder; a2: xla_op; a3: ptr csize_t): status_t {.importc: "get_dimensions".}
proc build*(a1: xla_builder; a2: xla_op; a3: ptr xla_computation): status_t {.importc: "build".}
proc compile*(a1: pjrt_client; a2: xla_computation; a3: ptr pjrt_loaded_executable): status_t {.importc: "compile".}
proc execute*(a1: pjrt_loaded_executable; a2: ptr literal_t; a3: cint;  
  a4: ptr ptr ptr pjrt_buffer, untuple_result: bool): status_t {.importc: "execute".}
proc execute_b*(a1: pjrt_loaded_executable; a2: ptr pjrt_buffer; a3: cint; 
  a4: ptr ptr ptr pjrt_buffer, untuple_result: bool): status_t {.importc: "execute_b".}
proc first_error*(a1: xla_builder): status_t {.importc: "first_error".}
proc get_current_status*(a1: xla_builder): status_t {.importc: "get_current_status".}
proc xla_computation_name*(a1: xla_computation): cstring {.importc: "xla_computation_name".}
proc xla_computation_free*(a1: xla_computation) {.importc: "xla_computation_free".}
